fix: fix some bugs with z-index

--- a/src/movieList/components/Header/AddPost/addpost.css
+++ b/src/movieList/components/Header/AddPost/addpost.css
@@ -5,10 +5,10 @@
     bottom: 0;
     left: 0;
     right: 0;
+    z-index: 6;
     width: 100%;
     flex-direction: column;
     color: brown;
-    /* z-index: 3; */
     display: flex;
     align-items: center;
     justify-content: center;
