--- a/src/movieList/components/MovieList/EditModalWindowSmall/editModalWindowSmall.css
+++ b/src/movieList/components/MovieList/EditModalWindowSmall/editModalWindowSmall.css
@@ -7,7 +7,7 @@
 .modal__window-small {
   left: 50px;
   width: 100%;
-  /* z-index: 2; */
+  z-index: 1;
   background: linear-gradient(rgba(111, 111, 111, 0.7), rgba(69, 50, 50, 0.7));
   display: flex;
   flex-direction: column;
