--- a/src/movieList/components/MovieList/Movie/movie.css
+++ b/src/movieList/components/MovieList/Movie/movie.css
@@ -1,16 +1,15 @@
 .block__movie-list {
     width: 256px;
+    margin-bottom: 50px;
 }
 
 .icon__menu {
-    position: relative;
-    width: 35px;
+    width: 30px;
     cursor: pointer;
 }
 
 .icon__menu-open {
-    position: relative;
-    width: 35px;
+    width: 30px;
     cursor: pointer;
 }
 
@@ -66,10 +65,9 @@
 }
 
 .block__edit-menu{
-   position: relative;
    top: 50px;
    display: flex;
-   height: 50px;
+   height: 35px;
    flex-direction: column;
    align-items:flex-end;
 }
